...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_sub_Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/subject_name"/>

                </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/new_sub_Name_lay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_sub_desc"
                            android:inputType="textMultiLine"
                            android:hint="@string/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>
...
                                  android:layout_height="wrap_content"
                                  android:text="@string/lessons"
                                  android:textSize="@dimen/mainSize"
                                  android:layout_margin="10dp"
                                  android:textStyle="bold"/>

                        <Spinner android:id="@+id/lesson_type"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:entries="@array/array_less_type"
                                 android:spinnerMode="dropdown"
                                 android:layout_marginTop="10dp">
                        </Spinner>
...
                            <LinearLayout android:layout_width="match_parent"
                                          android:layout_height="wrap_content"
                                          android:orientation="horizontal"
                                          android:weightSum="2">

                                <TextView
                                        android:id="@+id/first_lesson"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:layout_weight="1"
                                        android:text="@string/first_lesson"
                                        android:tag="first"/>


                                <TextView
                                        android:tag="last"
                                        android:id="@+id/last_lesson"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:layout_weight="1"
                                        android:text="@string/last_lesson"/>

...
                                              android:layout_weight="1"
                                              android:orientation="vertical"
                                              android:weightSum="5"
                                              android:id="@+id/Check_boxes">


                                    <CheckBox android:id="@+id/new_less_monday"
                                              android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              android:text="@string/monday"
                                              android:layout_weight="1"
                                              android:buttonTint="@color/primaryDarkColor"
                                              android:tag="Monday"/>
...
                                                  android:layout_weight="1"
                                                  android:orientation="vertical"
                                                  android:id="@+id/less_from"
                                                  android:weightSum="5">

                                        <TextView
                                                android:id="@+id/monday_from"
                                                android:layout_width="wrap_content"
                                                android:layout_height="0dp"
                                                android:text="@string/from"
                                                android:visibility="invisible"
                                                android:layout_weight="1"/>
                                        <TextView
...
                                                  android:orientation="vertical"
                                                  android:gravity="center"
                                                  android:id="@+id/less_to"
                                                 android:weightSum="5">

                                        <TextView
                                                android:id="@+id/monday_to"
                                                android:layout_width="wrap_content"
                                                android:layout_height="0dp"
                                                android:text="@string/to"
                                                android:visibility="invisible"
                                                android:layout_weight="1"/>
                                        <TextView
...

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <Button
                            android:id="@+id/subject_save"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="@+id/new_lesson_card"
                            app:layout_constraintTop_toBottomOf="@+id/new_lesson_card"
                            android:backgroundTint="@color/primaryLightColor"
...
