...
            android:textSize="20sp"
            android:textColor="@color/primaryDarkColor"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/SignUp_EditName"
            app:layout_constraintBottom_toTopOf="@id/Line3"
            app:layout_constraintStart_toStartOf="@id/SignUp_Name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/primaryDarkColor"
...
            android:textSize="20sp"
            android:textColor="@color/primaryDarkColor"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/SignUp_EditEmail"
            app:layout_constraintBottom_toTopOf="@id/Line5"
            app:layout_constraintStart_toStartOf="@id/SignUp_Email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/primaryDarkColor"
...
            android:textSize="20sp"
            android:textColor="@color/primaryDarkColor"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/SignUp_EditPassw"
            app:layout_constraintBottom_toTopOf="@id/Line7"
            app:layout_constraintStart_toStartOf="@id/SignUp_Name"
            android:textSize="20sp"
            android:background="@null"
            android:inputType="textPassword"
            android:tag="passw"
            android:textColor="@color/primaryDarkColor"
    />


    <RadioGroup
            android:id="@+id/SignUp_Group"
            app:layout_constraintTop_toBottomOf="@id/Line7"
            app:layout_constraintStart_toStartOf="@id/Line7"
            app:layout_constraintBottom_toTopOf="@id/Line9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical">

        <RadioButton android:id="@+id/SignUp_Teach"
                android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/teacher"
                     android:fontFamily="@font/almendra_display"
                     android:textStyle="bold"
                     android:textSize="20sp"
...
                     android:textSize="20sp"
                     android:textColor="@color/primaryDarkColor"
                     android:buttonTint="@color/primaryDarkColor"/>

    </RadioGroup>

    <TextView android:id="@+id/SignUp_OK"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toTopOf="@id/Line11"
              app:layout_constraintEnd_toEndOf="@id/Line10"
              android:text="@string/ok"
              android:layout_marginTop="15dp"
...
