<resources>
    <string name="app_name">MyGrades</string>
    <string name="app_name_dev">MyGradesDev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="timetable">Timetable</string>
    <string name="subjects">Subjects</string>
    <string name="grades">Grades</string>
    <string name="you_are_not_logged_in">You are not logged in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="messages">Messages</string>
    <string name="number">Number</string>
    <string name="street">Street</string>
    <string name="zip">ZIP</string>
    <string name="city">City</string>
    <string name="address">Address:</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="offline_user">Offline User</string>
    <string name="create_an_account">Create an account</string>
    <string name="password">Password:</string>
    <string name="e_mail">E-mail:</string>
    <string name="add_new_grade">Add new grade</string>
    <string name="subject">Subject</string>
    <string name="subject_">Subject:</string>
    <string name="student">Student</string>
    <string name="student_">Student:</string>
    <string name="grade">Grade</string>
    <string name="grade_">Grade:</string>
    <string name="comment">Comment</string>
    <string name="add">Add</string>
    <string name="new_subject">New Subject</string>
    <string name="subject_name">Subject name</string>
    <string name="description">Description</string>
    <string name="begin">Begin:</string>
    <string name="slip">-</string>
    <string name="end">End:</string>
    <string name="first_lesson">First lesson:</string>
    <string name="last_lesson">Last lesson:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="save">Save</string>
    <string name="choose_people">Choose People!</string>
    <string name="talkings">Talkings</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address:</string>
    <string name="password_">Password:</string>
    <string name="name_">Name:</string>
    <string name="teacher">Teacher</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="filters">Filters</string>
    <string name="lessons">Lessons</string>
    <string name="mon_">Mon:</string>
    <string name="tue_">Tue:</string>
    <string name="wed_">Wed:</string>
    <string name="thur_">Thur:</string>
    <string name="fri_">Fri:</string>
    <string name="take">Take</string>
    <string name="back">Back</string>
    <string name="login_failed">Login failed</string>
    <string name="datas_saved">Datas saved</string>
    <string name="addgradefields">Subject, Student and Grade fields are required!</string>
    <string name="message">Message</string>
    <string name="grade_type">grade</string>

    <string-array name="array_less_type">
        <item>Occasional</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
    </string-array>

    <string-array name="array_grades">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
